# gp-engine

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONORS.md  Doxyfile  LICENSE.md  LICENSE_HEADER  README.md  SECURITY.md  gp-engine.code-workspace
Source/: CMakeLists.txt
Source/Launch/: CMakeLists.txt
Source/Launch/Editor/: CMakeLists.txt
Source/Launch/Editor/Private/: Editor.cpp  Main.cpp
Source/Launch/Editor/Resources/: AppIcon.rc
Source/Launch/Editor/private/: Main.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Audio/: CMakeLists.txt
Source/Runtime/Core/: CMakeLists.txt
Source/Runtime/Core/Public/: Core.hpp  CoreBuild.hpp  CoreDefines.hpp  CoreTypes.hpp
Source/Runtime/Core/Public/Container/: Any.hpp  Any.inl  Array.hpp  ArrayView.hpp  ArrayView.inl  BasicString.hpp  BasicString.inl  BasicStringView.hpp  BasicStringView.inl  BitArray.hpp  BitArray.inl  BitSet.hpp  BitSet.inl  Container.hpp  ContainerForward.hpp  ContainerFwd.hpp  Deque.hpp  Deque.inl  HashMap.hpp  HashMap.inl  HashSet.hpp  HashSet.inl  List.hpp  List.inl  Map.hpp  Map.inl  MapView.hpp  MapView.inl  MultiHashMap.hpp  MultiHashMap.inl  MultiHashSet.hpp  MultiHashSet.inl  MultiMap.hpp  MultiMap.inl  MultiSet.hpp  MultiSet.inl  Name.hpp  Name.inl  Optional.hpp  Optional.inl  (+21 more)
Source/Runtime/Core/Public/Crypto/: Crypto.hpp  CryptoForward.hpp
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/HAL/: CMakeLists.txt
Source/Runtime/HAL/Public/: HAL.hpp  HALBuild.hpp  HALForward.hpp
Source/Runtime/IO/: CMakeLists.txt
Source/Runtime/Input/: CMakeLists.txt
Source/Runtime/Network/: CMakeLists.txt
Source/Runtime/Platform/: CMakeLists.txt
Source/Runtime/Platform/Public/: Platform.hpp
Source/Runtime/RHI/: CMakeLists.txt
Source/Runtime/RHI/Public/: RHI.hpp  RHIBuild.hpp  RHIConstants.hpp  RHIEnums.hpp  RHIForward.hpp  RHIFwd.hpp
Source/Runtime/Renderer/: CMakeLists.txt
Source/Runtime/Renderer/Public/: Renderer.hpp
Source/Runtime/Shaders/: CMakeLists.txt
Source/Runtime/Shaders/Public/: Shaders.hpp  ShadersBuild.hpp  ShadersForward.hpp
Source/Shaders/Private/Common/: BindlessResources.hlsli  Common.hlsli  Platform.hlsli  RootSignature.hlsli  Samplers.hlsli
Source/Shaders/Public/ShaderInterop/: ShaderInterop.hpp
examples/01-hello-window/: CMakeLists.txt
examples/01-hello-window/source/: Main.cpp
source/runtime/: CMakeLists.txt
source/runtime/animation/: CMakeLists.txt
source/runtime/animation/docs/: _category_.json
source/runtime/application/: CMakeLists.txt  README.md
source/runtime/application/docs/: README.md  _category_.json
source/runtime/audio/: .gitignore  CMakeLists.txt
source/runtime/audio/base/: CMakeLists.txt
source/runtime/audio/docs/: README.md
source/runtime/audio/openal/: CMakeLists.txt
source/runtime/core/: .gitignore  CMakeLists.txt  README.md
source/runtime/core/docs/: Concepts.md  Definitions.md  Macros.md  README.md
source/runtime/core/private/: Core.cpp
source/runtime/core/public/: CoreDefines.hpp  CoreForward.hpp  CoreGlobals.hpp  CoreMinimal.hpp
source/runtime/docs/: README.md
source/runtime/engine/: .gitignore  CMakeLists.txt  README.md
source/runtime/engine/docs/: README.md  _category_.json
source/runtime/hal/: CMakeLists.txt
source/runtime/hal/base/: CMakeLists.txt  README.md
source/runtime/hal/docs/: README.md  _category_.json
source/runtime/hal/generic/: CMakeLists.txt
source/runtime/hal/private/: HAL.cpp
source/runtime/hal/sdl3/: CMakeLists.txt  README.md
source/runtime/input/: .gitignore  CMakeLists.txt
source/runtime/io/: .gitignore  CMakeLists.txt
source/runtime/io/docs/: _category_.json
source/runtime/launch/: CMakeLists.txt
source/runtime/launch/public/: Launch.hpp
source/runtime/network/: .gitignore  CMakeLists.txt
source/runtime/network/docs/: README.md  _category_.json
source/runtime/network/epic/: CMakeLists.txt
source/runtime/network/http/: CMakeLists.txt
source/runtime/network/https/: CMakeLists.txt
source/runtime/network/steam/: CMakeLists.txt
source/runtime/network/tcp/: CMakeLists.txt
source/runtime/network/udp/: CMakeLists.txt
source/runtime/parser/blend/: CMakeLists.txt
source/runtime/parser/csv/: CMakeLists.txt
source/runtime/parser/docs/: README.md  _category_.json
source/runtime/parser/fbx/: CMakeLists.txt
source/runtime/parser/gltf/: CMakeLists.txt
source/runtime/parser/ini/: CMakeLists.txt
source/runtime/parser/json/: CMakeLists.txt
source/runtime/parser/xml/: CMakeLists.txt
source/runtime/parser/yaml/: CMakeLists.txt
source/runtime/physics/: .gitignore  CMakeLists.txt
source/runtime/physics/base/: CMakeLists.txt
source/runtime/physics/docs/: README.md  _category_.json
source/runtime/physics/jolt/: CMakeLists.txt
source/runtime/physics/physx/: CMakeLists.txt
source/runtime/physics/public/: Physics.hpp
source/runtime/renderer/: .gitignore  CMakeLists.txt  README.md
source/runtime/renderer/docs/: README.md  _category_.json
source/runtime/rhi/agc/: CMakeLists.txt
source/runtime/rhi/base/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/d3d11/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/d3d12/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/d3d12x/: CMakeLists.txt
source/runtime/rhi/docs/: README.md  _category_.json
source/runtime/rhi/gnm/: CMakeLists.txt
source/runtime/rhi/gnmx/: CMakeLists.txt
source/runtime/rhi/metal/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/null/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/nvn/: CMakeLists.txt
source/runtime/rhi/opengl/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/opengles/: CMakeLists.txt
source/runtime/rhi/vulkan/: .gitignore  CMakeLists.txt  README.md
source/runtime/rhi/webgl/: CMakeLists.txt
source/runtime/rhi/webgpu/: CMakeLists.txt
(+895 files in other folders)
